--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: javafibs-java # you probably want to 'snapcraft register <name>'
+name: javafibs # you probably want to 'snapcraft register <name>'
 base: core18 # the base snap is the execution environment for this snap
 version: '1.001' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Java client for the FIBS backgammon server
